changed box and font

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <% include ./partials/header%>
-<div class = "container2">
+<div class = "ui grid">
     <div class="box-Information">
    
-        <div class="box-data">
+        <div class="container">
             <center><h1>How can I help you?</h1></center> 
             <% person.forEach(function(worker){ %>
                 
