--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -65,6 +65,7 @@ h1 {
 
 .box-information{
 	padding-top: 80px;
+	margin: 0 auto;
 }
 
 
@@ -199,6 +200,9 @@ h1 {
 
 	font-size: 23px;
 }
+
+
+
 
  /*CLOCK*/
 #clock {
