--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,9 +1,9 @@
 body {
-	zoom: 75%;
+	zoom: 45%;
 	 display: inline;
 
  
-	margin-top: 85px;
+	margin-top: 120px;
 
 
 	font-family: 'Libre Franklin', sans-serif;
@@ -59,14 +59,16 @@ h1 {
 }
 
 .headername{
-	font-size: 35px;
+	font-size: 2.5rem;
 	font-weight: bolder;
 }
 
 .box-information{
 	padding-top: 80px;
+
 	margin: 0 auto;
 }
+
 
 
 .informationContent{
@@ -158,7 +160,8 @@ h1 {
 
 
 .ui.main.container{
-    height: 95%;
+    height: 990px;
+    margin-top: 120px;
 	padding-bottom: 20px;
 	
 }
