--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,9 +1,9 @@
 body {
-	zoom: 45%;
+	zoom: 75%;
 	 display: inline;
 
  
-	margin-top: 120px;
+	margin-top: 85px;
 
 
 	font-family: 'Libre Franklin', sans-serif;
@@ -59,16 +59,14 @@ h1 {
 }
 
 .headername{
-	font-size: 2.5rem;
+	font-size: 35px;
 	font-weight: bolder;
 }
 
 .box-information{
 	padding-top: 80px;
-
 	margin: 0 auto;
 }
-
 
 
 .informationContent{
@@ -160,8 +158,8 @@ h1 {
 
 
 .ui.main.container{
-    height: 990px;
-    margin-top: 120px;
+    height: 95%;
+    
 	padding-bottom: 20px;
 	
 }
