--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -76,10 +76,10 @@ h1 {
 	background-color: white;
 	padding: 30px;
 	float:left; 
-	display:inline;
+	display:inline-block;
 	max-width: 600px;
 	height: 900px;
-	width: 100%;
+	width: auto;
 
 	border: 1px solid #515E64;
 }
@@ -159,7 +159,7 @@ h1 {
 
 .ui.main.container{
     height: 95%;
-    
+
 	padding-bottom: 20px;
 	
 }
