--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -134,7 +134,7 @@ h1 {
     width: 100%;
     text-align: center;
     font-size: 55px;
-    margin: 300px auto;
+    margin: 10% auto;
     font-weight: normal;
 }
 
