--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,12 @@
                          <div class="description">
                              <p><strong>Fun Fact: </strong><%- worker.FunFact %></p>
                          </div>
-                         
-                            <img src="<%= worker.image %>" style=" max-width: 450px;max-height: 600px; margin-top: 30px; " >
-                     
-                         
                     </div>
+                         <div class="description">
+                            <img src="<%= worker.image %>" style=" width: 400px; height: 500px; margin-top: 30px; " >
+                        </div>
+                         
+                    
                 </div>
             <% }); %>
        </div>
