Adjusting to iPad screen

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -19,7 +19,7 @@
         </div>
         
         
-        <div class="ui main   ">
+        <div class="ui main  contact ">
             <div class="ui huge header returnby"><span class="Welcome ">Welcome to WITS !
             <p class="second-header">No members of WITS are available right now, but someone will return soon.</p>
             
