--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -68,12 +68,12 @@ h1 {
 	margin: 0 auto;
 }
 
-.box-information strong{
-	font-size: 13px;
+.description  strong{
+	font-size: 16px;
 }
 
 .description p{
-	font-size: 14px;
+	font-size: 17px;
 }
 
 .informationContent{
@@ -164,14 +164,15 @@ h1 {
     display: inline;
 }
 
-.ui.main{
+.ui.main.contact{
 	margin-top: 15%;
 	
 }
 
 
 .ui.main.container{
-    height: 95%;
+	margin-top: 150px;
+    height: 550px;
 
 	padding-bottom: 20px;
 	
