--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                          <a class="headername" href="/timeclock/<%= worker._id %>"><%=worker.name%></a>
                        
                          <div class="description">
-                             <p></p><strong>Hometown: </strong> <%- worker.Hometown %></p>
+                             <p><strong>Hometown: </strong> <%- worker.Hometown %></p>
                          </div>
                          <div class="description">
                              <p><strong>Major: </strong><%- worker.Major %></p>
@@ -25,7 +25,7 @@
                          </div>
                     </div>
                          <div class="description">
-                            <img src="<%= worker.image %>" style=" width: 400px; height: 500px; margin-top: 30px; " >
+                            <img src="<%= worker.image %>" style=" width: 400px; height: 500px; margin-top: 60px; " >
                         </div>
                          
                     
