--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
                     <div class="contentSegment">
                          <a class="headername" href="/timeclock/<%= worker._id %>"><%=worker.name%></a>
                        
-                         <div class="description">
+                         <div class="description top-description">
                              <p><strong>Hometown: </strong> <%- worker.Hometown %></p>
                          </div>
                          <div class="description">
@@ -25,7 +25,7 @@
                          </div>
                     </div>
                          <div class="description">
-                            <img src="<%= worker.image %>" style=" width: 400px; height: 500px; margin-top: 80px; " >
+                            <img src="<%= worker.image %>" style=" width: 400px; height: 500px; margin-top: 90px; " >
                         </div>
                          
                     
