--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                              <p><strong>Fun Fact: </strong><%- worker.FunFact %></p>
                          </div>
                     </div>
-                         <div class="description">
+                         <div class="image">
                             <img src="<%= worker.image %>" style=" width: 300px; height: 400px; margin-top: 100px; " >
                         </div>
                          
