Adjusting to iPad screen

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                          </div>
                     </div>
                          <div class="image">
-                            <img src="<%= worker.image %>" style=" width: 300px; height: 400px; margin-top: 100px; " >
+                            <img src="<%= worker.image %>" style=" width: 300px; height: 400px; " >
                         </div>
                          
                     
