--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -36,8 +36,8 @@
                 </div>
                 <div class="bottomcontact ">
                 
-                    <strong>Email Help Requests:</strong> support@nwuwits.org<br>
-                    <strong>Phone or Text:</strong> 402-613-0156
+                    <strong>Email Help Requests:</strong> support@***.org<br>
+                    <strong>Phone or Text:</strong> 402-***-****
                 
                  
                       
